# ntfsindex

./: CMakeLists.txt  README.md  conanfile.txt  config.example.json  flags.example.txt
.github/workflows/: ci.yml  release.yml
src/: http_server.cpp  http_server.h  main.cpp  ntfs_indexer.cpp  ntfs_indexer.h  ntfs_parser.cpp  ntfs_parser.h  ntfs_structs.h  tui_client.cpp  tui_client.h
tests/: tests.cpp
web/: app.js  index.html  style.css
